# Snake-Game

./: CMakeLists.txt  FilePaths.h  game.c  game.h  main.c  menu.c  menu.h  render.c  render.h
